--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,6 @@ SET(src_files
         ${CMAKE_SOURCE_DIR}/src/drivers/devices/input/keyboard.cpp
         ${CMAKE_SOURCE_DIR}/src/drivers/devices/io/apic.cpp
         ${CMAKE_SOURCE_DIR}/src/drivers/devices/storage/ata.cpp
-        ${CMAKE_SOURCE_DIR}/src/global/core-att.s
 )
 
 SET(lib_files
@@ -57,6 +56,7 @@ SET(src_no_sse
 )
 
 SET(src_as
+        ${CMAKE_SOURCE_DIR}/src/global/core-att.s
         )
 
 SET(src_preamble
@@ -78,6 +78,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 add_executable(kernel)
 
-target_sources(kernel PUBLIC ${src_preamble} PUBLIC ${src_files} PUBLIC ${src_no_sse} PUBLIC ${lib_files} PUBLIC ${src_as} PUBLIC ${src_epilogue})
+target_sources(kernel PUBLIC ${src_preamble} PUBLIC ${src_files} PUBLIC ${src_no_sse} PUBLIC ${lib_files} PUBLIC ${src_epilogue})
 target_compile_options(kernel PRIVATE -ffreestanding -O0 -Wall -Wextra -Wall -Werror -fPIC -fno-exceptions -fno-omit-frame-pointer -mno-red-zone -fno-stack-protector $<$<COMPILE_LANGUAGE:CXX>:-fno-rtti> -ggdb3)
 target_link_options(kernel PRIVATE -T ${CMAKE_SOURCE_DIR}/linker.ld -ffreestanding -O2 -nostdlib -nostartfiles -lgcc)
